--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -22,6 +22,7 @@
             border: 2px solid black;
             padding: 10px;
             width: 75%;
+            height: 590px;
 
             img {
                 width: 100%;
