--- a/src/sass/bookappointment.scss
+++ b/src/sass/bookappointment.scss
@@ -70,6 +70,7 @@
 
         span.error {
             position: absolute;
+            display: block;
             color: #ed4337;
         }
         .react-datepicker-wrapper {
